Bug 1076783. Move scroll info layers to the bottom of the background layer so they are behind most things. r=roc

Bug 1041510 moved them to the top so merging and flattening with scroll layer items worked correctly, but we don't need scroll layer items anymore.